--- a/app-deploy/templates/default/parameters.yml.erb
+++ b/app-deploy/templates/default/parameters.yml.erb
@@ -2,13 +2,7 @@
 parameters:
     database_driver: pdo_mysql
     database_host: <%= @host %>
-    database_port: null
-    #database_name: <%= @dbname %>
+    database_port: <%= @port %>
+    database_name: <%= @dbname %>
     database_user: <%= @user %>
     database_password: <%= @password %>
-    mailer_transport: smtp
-    mailer_host: email-smtp.us-east-1.amazonaws.com
-    database_path: null
-<% @parameters[@application.to_s][:parameters].sort.each do | param_value | %> 
-    <%= param_value %> 
-<% end %>
