--- a/app-deploy/templates/default/parameters.yml.erb
+++ b/app-deploy/templates/default/parameters.yml.erb
@@ -6,3 +6,9 @@ parameters:
     database_name: <%= @dbname %>
     database_user: <%= @user %>
     database_password: <%= @password %>
+    mailer_transport: smtp
+    mailer_host: 127.0.0.1
+    mailer_user: null
+    mailer_password: null
+    locale: en
+    secret: 1234
