--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -1,18 +1,34 @@
+upstream phpfcgi {
+    server 127.0.0.1:9000;
+    # server unix:/var/run/php5-fpm.sock; #for PHP-FPM running on UNIX socket
+}
 server {
-  listen   80;
-  server_name  <%= node['hostname'] %>;
-  access_log  <%= node['nginx']['log_dir'] %>/localhost.access.log;
-  
-  location / {
-	  index index.html index.htm index.php;
-  }
-  location ~ \.php$ {
-        try_files $uri =404;
-        root           /srv/www/doctrine/current/web;
-        fastcgi_pass   127.0.0.1:9000;
-        fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME   $document_root$fastcgi_script_name;
-        include        fastcgi_params;
-  }
-
+    listen 80;
+ 
+    server_name <%= node['hostname'] %>;
+    root /srv/www/doctrine/current/web;
+ 
+    error_log /var/log/nginx/symfony2.error.log;
+    access_log /var/log/nginx/symfony2.access.log;
+ 
+    # strip app.php/ prefix if it is present
+    rewrite ^/app\.php/?(.*)$ /$1 permanent;
+ 
+    location / {
+        index app.php;
+        try_files $uri @rewriteapp;
+    }
+ 
+    location @rewriteapp {
+        rewrite ^(.*)$ /app.php/$1 last;
+    }
+ 
+    # pass the PHP scripts to FastCGI server from upstream phpfcgi
+    location ~ ^/(app|app_dev|config)\.php(/|$) {
+        fastcgi_pass phpfcgi;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
+        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param  HTTPS off;
+    }
 }
