--- a/app-deploy/templates/default/parameters.yml.erb
+++ b/app-deploy/templates/default/parameters.yml.erb
@@ -12,3 +12,7 @@ parameters:
     mailer_password: null
     locale: en
     secret: 1234
+    thumbor_host: <%= @thumbor_host %>
+    thumbor_port: <%= @thumbor_port %>
+    thumbor_secret: <%= @thumbor_secret %>
+    
