adding musicapi parameter

--- a/app-deploy/templates/default/parameters.yml.erb
+++ b/app-deploy/templates/default/parameters.yml.erb
@@ -15,4 +15,4 @@ parameters:
     thumbor_host: <%= @thumbor_host %>
     thumbor_port: <%= @thumbor_port %>
     thumbor_secret: <%= @thumbor_secret %>
-    
+    musicapi:  <%= @musicapi %>
