--- a/nginx/templates/default/default-site.erb
+++ b/nginx/templates/default/default-site.erb
@@ -7,7 +7,13 @@ server {
  
     server_name <%= node['hostname'] %>;
     root /srv/www/doctrine/current/web;
- 
+    
+    # Gzip
+    gzip on;
+    gzip_min_length 1000;
+    gzip_http_version 1.0;
+    gzip_types text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript application/json;
+         
     error_log /var/log/nginx/symfony2.error.log;
     access_log /var/log/nginx/symfony2.access.log;
  
